13 May 2008: Wouter
	- Added root ipv6 addresses to builtin root hints.
	- TODO modified for post 1.0 plans.
	- trunk version set to 1.0.0.
	- no unnecessary linking with librt (only when libevent/libev used).

7 May 2008: Wouter
	- fixup no-ip4 problem with error callback in outside network.

25 April 2008: Wouter
	- DESTDIR is honored by the Makefile for rpms.
	- contrib files unbound.spec and unbound.init, builds working RPM
	  on FC7 Linux, a chrooted caching resolver, and libunbound.
	- iana ports update.

24 April 2008: Wouter
	- chroot checks improved. working directory relative to chroot.
	  checks if config file path is inside chroot. Documentation on it.
	- nicer example.conf text.
	- created 0.11 tag.

23 April 2008: Wouter
	- parseunbound.pl contrib update from Kai Storbeck for threads.
	- iana ports update

22 April 2008: Wouter
	- ignore SIGPIPE.
	- unit test for SIGPIPE ignore.

21 April 2008: Wouter
	- FEATURES document.
	- fixup reread of config file if it was given as a full path
	  and chroot was used.

16 April 2008: Wouter
	- requirements doc, updated clean query returns.
	- parseunbound.pl update from Kai Storbeck.
	- sunos4 porting changes.

15 April 2008: Wouter
	- fixup default rc.d pidfile location to /usr/local/etc.
	- iana ports updated.
	- copyright updated in ldns-testpkts to keep same as in ldns.
	- fixup checkconf chroot tests a bit more, chdir must be inside
	  chroot dir.
	- documented 'gcc: unrecognized -KPIC option' errors on Solaris.
	- example.conf values changed to /usr/local/etc/unbound
	- DSA test work.
	- DSA signatures: unbound is compatible with both encodings found.
	  It will detect and convert when necessary.

14 April 2008: Wouter
	- got update for parseunbound.pl statistics script from Kai Storbeck.
	- tpkg tests for udp wait list.
	- documented 0x20 status.
	- fixup chroot and checkconf, it is much smarter now.
	- fixup DSA EVP signature decoding. Solution that Jelte found copied.